<resources>
    <string name="app_name">Kotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_price">%1$s %2$s %3$s %4$s</string>
    <string name="train_code">车次</string>
    <string name="g1">D2286</string>
    <string name="action_date">日期</string>
    <string name="query">查询</string>
    <string name="pleaseInputCode">请输入车次</string>
    <!--train detail head string-->
    <string name="order">站序</string>
    <string name="stationName">站名</string>
    <string name="remainTime">停留</string>
    <string name="arriveTime">到时</string>
    <string name="leaveTime">发时</string>
    <!--train detail head string-->

    <string name="swap">交换</string>
    <string name="fromStation">出发</string>
    <string name="toStation">到达</string>
    <string name="title_update_tip">是否更新</string>
    <string name="message_update_tip">获取最新最全的车站列表</string>
    <string name="error_try_again">重试</string>
    <string name="is_update_data">已是最新数据</string>
    <string name="updateing">正在更新中</string>
    <string name="all_station_count">车站总数：%1$d</string>
    <string name="current_station_count">已更新数量：%1$d</string>
    <string name="shi_fa">始</string>
    <string name="zhong_dao">终</string>
    <string name="guo_lu">过</string>
    <string name="title_activity_bottom_navigation">底部导航</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
