<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/item_head"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/train_detail_item_textView"
            android:layout_weight="@integer/detail_weight_order"
            android:text="@string/order" />

        <TextView
            style="@style/train_detail_item_textView"
            android:layout_weight="@integer/detail_weight_station_name"
            android:text="@string/stationName" />

        <TextView
            style="@style/train_detail_item_textView"
            android:layout_weight="@integer/detail_weight_arrive_time"
            android:text="@string/arriveTime" />

        <TextView
            style="@style/train_detail_item_textView"
            android:layout_weight="@integer/detail_weight_leave_time"
            android:text="@string/leaveTime" />

        <TextView
            style="@style/train_detail_item_textView"
            android:layout_weight="@integer/detail_weight_remain_time"
            android:text="@string/remainTime" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>